--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 html {
     box-sizing: border-box;
 }
-
+#youtube-audio{
+  aspect-ratio: 1;
+  width: 200px;
+  background-color: red;
+}
 *,
 *::before,
 *::after {
@@ -27,6 +31,8 @@ body {
     flex-direction: row;
 }
 .what {
+  display: flex;
+  flex-direction: column;
     width: 50%;
     
 }
@@ -149,111 +155,11 @@ h1 {
     }
   }
   
-  .box-of-star1,
-  .box-of-star2,
-  .box-of-star3,
-  .box-of-star4 {
-    width: 100%;
-    position: absolute;
-    z-index: 10;
-    left: 0;
-    top: 0;
-    transform: translateY(0px);
-    height: 700px;
-  }
-  
-  .box-of-star1 {
-    animation: snow 5s linear infinite;
-  }
-  
-  .box-of-star2 {
-    animation: snow 5s -1.64s linear infinite;
-  }
-  
-  .box-of-star3 {
-    animation: snow 5s -2.30s linear infinite;
-  }
-  
-  .box-of-star4 {
-    animation: snow 5s -3.30s linear infinite;
-  }
-  
-  .star {
-    width: 3px;
-    height: 3px;
-    border-radius: 50%;
-    background-color: #FFF;
-    position: absolute;
-    z-index: -1;
-    opacity: 0.7;
-  }
-  
-  .star:before {
-    content: "";
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
-    background-color: #FFF;
-    position: absolute;
-    z-index: -1;
-    top: 80px;
-    left: 70px;
-    opacity: .7;
-  }
-  
-  .star:after {
-    content: "";
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background-color: #FFF;
-    position: absolute;
-    z-index: -1;
-    top: 8px;
-    left: 170px;
-    opacity: .9;
-  }
-  
-  .star-position1 {
-    top: 30px;
-    left: 20px;
-  }
-  
-  .star-position2 {
-    top: 110px;
-    left: 250px;
-  }
-  
-  .star-position3 {
-    top: 60px;
-    left: 570px;
-  }
-  
-  .star-position4 {
-    top: 120px;
-    left: 900px;
-  }
-  
-  .star-position5 {
-    top: 20px;
-    left: 1120px;
-  }
-  
-  .star-position6 {
-    top: 90px;
-    left: 1280px;
-  }
-  
-  .star-position7 {
-    top: 30px;
-    left: 1480px;
-  }
   
   .astronaut {
     width: 250px;
     height: 300px;
-    position: absolute;
-    z-index: 11;
+    z-index: 0;
     top: calc(25% - 150px);
     left: calc(75% - 125px);
     animation: astronaut 5s linear infinite;
@@ -451,4 +357,156 @@ h1 {
     border-bottom: 10px solid #b0cfe4;
   }
 
+  
 
+
+  
+  
+  .box2 {
+    width: 300px;
+    margin: 50px auto;
+    border: 4px solid #00bfb6;
+    padding: 20px;
+    text-align: center;
+    font-weight: 900;
+    color: #00bfb6;
+    font-family: arial;
+    position: relative;
+  }
+  
+  
+  /* speech bubble 9 */
+  
+  .sb9:before {
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid #00bfb6;
+    border-bottom: 10px solid transparent;
+    right: 50%;
+    bottom: -23px;
+  }
+  
+  .sb9:after {
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid #fff;
+    border-bottom: 10px solid transparent;
+    right: 50%;
+    bottom: -18px;
+  }
+  
+  
+  /* speech bubble 10 */
+  
+  .sb10:before {
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid #00bfb6;
+    right: 50%;
+    top: -23px;
+  }
+  
+  .sb10:after {
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid #fff;
+    right: 50%;
+    top: -18px;
+  }
+  
+  
+  /* speech bubble 11 */
+  
+  .sb11:before {
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-left: 10px solid transparent;
+    border-right: 10px solid #00bfb6;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    left: -23px;
+  }
+  
+  .sb11:after {
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-left: 10px solid transparent;
+    border-right: 10px solid #fff;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    left: -17px;
+  }
+  
+  
+  /* speech bubble 12 */
+  
+  .sb12:before {
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-left: 10px solid #00bfb6;
+    border-right: 10px solid transparent;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    right: -23px;
+  }
+  
+  .sb12:after {
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-left: 10px solid #fff;
+    border-right: 10px solid transparent;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    right: -17px;
+  }
+  
+  
+  
+  
+  
+  
+  
+  /* youtube link */
+  .youtube{
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    width: 160px;
+    text-align: center;
+    padding: 15px 10px;
+    background: #bb0000;
+    border-radius: 5px;
+  }
+  
+  .youtube a{
+    text-decoration: none;
+    color: #fff;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+  }
